# yad

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/libyad/: error.hpp  libyad.hpp  pipe.hpp  process.hpp  register_info.hpp
include/libyad/detail/: register.inc
src/: CMakeLists.txt  libyad.cpp  pipe.cpp  process.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: run_endlessly.cpp
tools/: CMakeLists.txt  main.cpp  main.cpp.bak  yad.cpp
